Add more classifications and add architecture

--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,5 +1,6 @@
 \section{Распознавание вторжений в БД}
 
+
 \subsection{Основные понятия}
 
 \textbf{Обнаружение вторжений} (применительно к БД) -- процесс выявления действий, 
@@ -18,17 +19,18 @@
 уже произошедних событий, а также оповещение персонала при срабатывании определенных правил.
 
 Если классифицировать методы обнаружения вторжения, используемые в системах обнаружения вторжений (СОВ), 
-то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном \autocite{IDSClassification}):
+то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном [\cite{IDSClassification}]):
 \begin{itemize}
-	\item синтаксические методы 
+	\item синтаксические методы (или методы поиска злоупотреблений, англ. misuse detection)
 		К таким методам обычно относятся методы, которые основываются на обнаружения вторжений 
 		путём сравнения SQL-запросов с шаблонами недопустимых синтаксических конструкций.
-	\item методы обнаружения аномалий
+	\item методы обнаружения аномалий (англ. anomaly detection)
 		Такие методы, наоборот, в отличие от первого типа, подрузамевают создание шаблонов нормального 
 		поведения пользователя и последующее сравнение этих шаблонов с действиями, выполняемыми пользователями 
 		во время работы с БД.
 	\item смешанные методы, представляющие собой композицию первых двух
 \end{itemize}
+
 
 \subsection{Системы распознавания вторжений}
 
@@ -39,51 +41,130 @@
 вторжений. Иначе говоря, IPS системы являются активными IDS системами.
 
 В IDS системах, система также ответственна за реализацию ответных мер на нарушения: блокировка соединения,
-настрйока межсетевого экрана и прочее. Таким образом,
+настройки межсетевого экрана и прочее. Таким образом,
 
 \textbf{Система обнаружения и предотвращения вторжений (IPS/IDS)} (применительно к БД) -- это 
 программное или программно-техническое средство, предназначенное для выявления фактов 
 неавторизованного доступа и предотвращания попыток несанкционированного доступа к БД.
 
-\subsubsection*{Типы моделей систем распознавания вторжений (ID-систем)}
 
-Системы обнаружения и предотвращения разделяют на
+\subsubsection{Типы моделей систем распознавания вторжений (ID-систем)}
+
+Существует множество способов классификации СОВ, которые не являются однозначными или обязательными.
+Следует рассмотреть наиболее известные и используемые классификации, которые характеризуют систему по:
+\begin{itemize}
+	\item \textbf{По способу мониторинга}
+	\item \textbf{По способу анализа}
+	\item \textbf{По скорости реакции}
+	\item \textbf{По классу защиты}
+\end{itemize}
+
+\paragraph*{По способу мониторинга.}
 
 \begin{itemize}
-	\item \textbf{Сетевые СОВ (Network-based IDS, NIDS)} -- системы, 
-	которая занимается проверкой сетевого трафика с концентратора или коммутатора.
-	\item \textbf{Основанные на протоколах СОВ (Protocol-based IDS, PIDS)} -- системы, 
-	которая отслеживает и анализирует коммуникационные протоколы со связанными системами или пользователями.
-	Обычно это предполагает наблюдение за HTTP- и HTTPS-протоколами и анализ соответствующих пакетов.
-	\item \textbf{Основанные на прикладных протоколах СОВ (Application Protocol-based IDS, APIDS)} -- системы, 
-	в которых ведется наблюдения за специализированными прикладными протоколами и анализ соответствующих 
+	\item \textbf{Сетевая СОВ (Network-based IDS, NIDS)} -- система, 
+	которая занимается проверкой сетевого трафика с концентратора или коммутатора и анализируя сетевые пакеты.
+	\item \textbf{Узловая СОВ (Host-based IDS, HIDS)} -- система, 
+	отслеживающая вторжения, используя анализ системных вызовов, логов приложений, модификаций файлов 
+	(исполняемых, файлов паролей, системных баз данных), состояния хоста и прочих источников. 
+	\item \textbf{Основанная на прикладных протоколах СОВ (Application protocol-based IDS, APIDS)} -- система, 
+	в которой ведется наблюдение за специализированными прикладными протоколами и анализ соответствующих 
 	данных. Например, на веб-сервере с SQL базой данных СОВ будет отслеживать содержимое SQL команд, 
 	передаваемых на сервер.
-	\item \textbf{Узловые Host-Based, (HIDS)} -- системы, 
-	отслеживающая вторжения, используя анализ системных вызовов, логов приложений, 
-	модификаций файлов (исполняемых, файлов паролей, системных баз данных), 
-	состояния хоста и прочих источников. 
-	\item \textbf{Гибридные} -- системы, которые являются композицией нескольких видов 
+	\item \textbf{Гибридная СОВ} -- система, которая является композицией нескольких видов 
 	систем обнаружения вторжений.
 \end{itemize}
 
-% Так на сегодняшний день активно развиваются СОВ, работающие на основе прикладных протоколов, которые используются
-% различными программами. К таким протоколам в частности относится SQL – язык описания запросов к реляционным базам данных.
+\paragraph*{По способу анализа.}
 
+О данной классификации уже говорилось ранее. Она устроена на анализе событий, полученных из источника 
+информации, и принимает решения, что происходит проникновение. Способами анализа являются 
+\textbf{обнаружение злоупотреблений} и \textbf{обнаружение аномалий}.
 
-\paragraph{Общая структура ID-систем} 
+\paragraph*{По скорости реакции.}
 
-\subsubsection*{Концептуальная схема систем обнаружения вторжений включает в себя:}
+Определяют два типа СОВ по времени между получением информации из источника и ее анализом и принятием решения.
+В зависимости от задержки во времени, СОВ разделятся на:
 \begin{itemize}
-	\item Подсистему сбора событий (сенсорную)
-	\item Подсистему анализа данных, полученных от сенсорной подсистемы
-	\item Подсистему хранения событий
-	\item Консоль администрирования
+	\item \textbf{с пакетным режимом (interval-based)}. В таких системах реакция происходит 
+	через определенные интервалы времени, а информационный поток от точек мониторинга до инструментов анализа
+	не является непрерывным.
+	\item \textbf{непрерывные (real-time)}. В таких системах обрабатывается непрерывный поток информации 
+	от источников. При этом таких тип является преобладающей типом в сетевых СОВ, которые получают 
+	информацию из потока сетевого трафика.
 \end{itemize}
 
-\paragraph{Шаблоны классов пользователей}
+\paragraph*{По классу защиты.}
 
-\paragraph{Модели известных атак}
+Для каждой сертифицированной в России СОВ присваивается некоторый класс защиты 
+согласно классификации ФСТЭК и выполненным требованиям для определенного профиля защиты (ПЗ).
+Всего существует 6 классов, где самый низкий класс - шестой, а самый высокий - первый.
+
+Согласно ФСТЭК СОВ разделяются на [\cite{IDSFSTEK}]:
+\begin{itemize}
+	\item \textbf{СОВ с 6 классом защиты}: применяются в информационных системах персональных данных 3 и 4 классов.
+	\item \textbf{СОВ с 5 классом защиты}: применяются в информационных системах персональных данных 2 класса.
+	\item \textbf{СОВ с 4 классом защиты}: применяются в государственных информационных системах, 
+	в которых обрабатывается информация ограниченного доступа, не содержащая сведения, 
+	составляющие государственную тайну, в информационных системах персональных данных 1 класса , 
+	а также в информационных системах общего пользования II класса.
+	\item \textbf{СОВ с 3, 2 или 1 классом защиты}: применяются в информационных системах, 
+	в которых обрабатывается информация, содержащая сведения, составляющие государственную тайну.
+\end{itemize}
+
+
+\subsubsection{Общая структура ID-систем} 
+
+\paragraph*{Архитектура СОВ.} Основные архитектурные компоненты СОВ: 
+\begin{enumerate}
+	\item \textbf{Host} -- система, на которые выполняется ПО СОВ.
+	\item \textbf{Target} -- система, за которой наблюдает СОВ.
+\end{enumerate}
+
+Первоначально многие СОВ выполнялись на тех же системах, которые они защищали. 
+Основная причина этого была в том, что большинство систем было mainframe, и стоимость выполнения СОВ 
+на отдельном компьютере была очень большой. Это создавало проблему с точки зрения безопасности, так как 
+любой атакующий, который успешно атаковал целевую систему, мог в качестве одной из компонент атаки просто 
+запретить функционирование СОВ.
+
+Но с появлением рабочих станций и персональных компьютеров в большинстве архитектур СОВ предполагается 
+выполнение СОВ на отдельной системе, тем самым разделяя системы Host и Target. Это улучшает безопасность 
+функционирования СОВ, так как в этом случае проще спрятать существование СОВ от атакующих.
+
+\paragraph*{Компоненты современных СОВ:}
+
+\begin{itemize}
+	\item сенсор, который отслеживает события в сети или системе;
+	\item анализатор событий, обнаруженных сенсорами;
+	\item компонента принятия решения.
+\end{itemize}
+
+\paragraph*{Способы управления СОВ:}
+
+\begin{itemize}
+	\item \textbf{Централизованное управление}. При централизованных стратегиях управления весь 
+	мониторинг, обнаружение и отчетность управляются непосредственно с единого "поста". 
+	В этом случае существует единственная консоль СОВ, которая связана со всеми сенсорами, 
+	расположенными в сети.
+	\item \textbf{Частично распределенное управление}. Мониторинг и определение управляются с локально 
+	управляемого узла, с иерархической отчетностью в одно или более центральных расположений.
+	\item \textbf{Полностью распределенное управление}. Мониторинг и определение выполняются с 
+	использованием подхода, основанного на агентах, когда решения об ответе делаются в точке анализа.
+\end{itemize}
+
+При этом в сети должны поддерживаться следующие связи:
+
+\begin{itemize}
+	\item связи для передачи отчетов СОВ. Эти связи создаются между сенсорами как сетевого мониторинга, так и мониторинга хоста, и центральной консолью СОВ;
+	\item связи для мониторинга хостов и сетей;
+	\item связи для выполнения ответов СОВ.
+\end{itemize}
+
+
+\subsubsection{Шаблоны классов пользователей}
+
+
+\subsubsection{Модели известных атак}
 \begin{itemize}
 	\item Необычные запросы и команды администрирования SQL сервера, часто употребляемые взломщиками (DROP, CREATE и т.д.)
 	\item Незаконные операции DELETE, UPDATE и INSERT
@@ -93,6 +174,7 @@
 	\item Попытка обнулить поля с паролем
 	\item Внедрение в запросе OR, сравнения констант и другое
 \end{itemize}
+
 
 \subsection{Экспертные ID-системы}
 
@@ -163,6 +245,9 @@
 \end{enumerate}
 
 \subsection{Развитие систем распознавания вторжений}
+
+% Так на сегодняшний день активно развиваются СОВ, работающие на основе прикладных протоколов, которые используются
+% различными программами. К таким протоколам в частности относится SQL – язык описания запросов к реляционным базам данных.
 
 Дальнейшие направления совершенствования связаны с внедрением в теорию и практику СОВ общей теории систем, методов синтеза и анализа информационных систем, конкретного аппарата теории распознавания образов. Эти разделы теории предполагают получение конкретных методов исследования для области систем СОВ.
 
