--- a/bibliography.bib
+++ b/bibliography.bib
@@ -108,6 +108,11 @@
 	journal = {Technical Report 99–15},
 	publisher = {Chalmers Univ.},
 }
+@techreport{IDSFSTEK,
+  title       = {ИНФОРМАЦИОННОЕ ПИСЬМО ОБ УТВЕРЖДЕНИИ ТРЕБОВАНИЙ К СИСТЕМАМ ОБНАРУЖЕНИЯ ВТОРЖЕНИЙ},
+  institution = {ФЕДЕРАЛЬНАЯ СЛУЖБА ПО ТЕХНИЧЕСКОМУ И ЭКСПОРТНОМУ КОНТРОЛЮ (ФСТЭК РОССИИ)},
+  year        = {2012}
+}
 
 @article{SDB1989,
 	author = {NABIL R. ADAM, JOHN C. WORTMANN},
