Add part "Шаблоны классов пользователей"

--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -77,8 +77,8 @@
 
 \paragraph*{По способу анализа.}
 
-О данной классификации уже говорилось ранее. Она устроена на анализе событий, полученных из источника 
-информации, и принимает решения, что происходит проникновение. Способами анализа являются 
+О данной классификации уже говорилось ранее. Она строится по методу анализа событий, полученных из источника 
+информации, и методу принятия решения, что происходит проникновение. Способами анализа являются 
 \textbf{обнаружение злоупотреблений} и \textbf{обнаружение аномалий}.
 
 \paragraph*{По скорости реакции.}
@@ -115,9 +115,9 @@
 
 \subsubsection{Общая структура ID-систем} 
 
-\paragraph*{Архитектура СОВ.} Основные архитектурные компоненты СОВ: 
+\paragraph*{Архитектура СОВ.} Основнымы архитектурными компонентами СОВ являются: 
 \begin{enumerate}
-	\item \textbf{Host} -- система, на которые выполняется ПО СОВ.
+	\item \textbf{Host} -- система, на которой выполняется ПО СОВ.
 	\item \textbf{Target} -- система, за которой наблюдает СОВ.
 \end{enumerate}
 
@@ -163,10 +163,53 @@
 
 \subsubsection{Шаблоны классов пользователей}
 
+Рассматривать шаблоны классов пользователей имеет смысл только в контексте СОВ, применяющих методы 
+обнаружения аномалий, так как именно они строят и используют такие шаблоны поведения пользователей.
+Таким образом, детекторы аномалий определяют необычное поведение на хосте или в сети. 
+Они предполагают, что атаки отличаются от некоторой нормальной деятельности и могут, следовательно, 
+быть определены системой, которая умеет отслеживать эти отличия. Детекторы аномалий создают профили, 
+представляющие собой нормальное поведение пользователей, хостов или сетевых соединений. 
+Эти профили создаются, исходя из данных истории, собранных в период нормального функционирования. 
+Затем детекторы собирают данные о событиях и используют различные метрики для определения того, 
+что анализируемая деятельность отклоняется от нормальной.
+
+Метрики и технологии, используемые при определении аномалий, включают:
+
+\begin{itemize}
+	\item определение допустимого порога. В этом случае основные атрибуты поведения пользователя и системы 
+	выражаются в количественных терминах. Для каждого атрибута определяется некоторый уровень, который 
+	устанавливается как допустимый. Такие атрибуты поведения могут определять число файлов, доступных 
+	пользователю в данный период времени, число неудачных попыток входа в систему, количество времени ЦП, 
+	используемое процессом и т.п. Данный уровень может быть статическим или эвристическим — например, может 
+	определяться изменением анализируемых значений.
+	\item статистические метрики: параметрические, при которых предполагается, что распределение 
+	атрибутов профиля соответствует конкретному образцу, и непараметрические, при которых распределение 
+	атрибутов профиля является "обучаемым" исходя из набора значений истории, которые наблюдались за 
+	определенный период времени.
+	\item метрики, основанные на правилах, которые аналогичны непараметрическим статистическим метрикам в 
+	том, что наблюдаемые данные определяют допустимые используемые образцы, но отличаются от них в том, 
+	что эти образцы специфицированы как правила, а не как численные характеристики.
+	\item другие метрики, включая нейросети, генетические алгоритмы и модели иммунных систем.
+\end{itemize}
+
+\paragraph*{Преимущества определения аномалий:}
+
+\begin{itemize}
+	\item IDS, основанные на определении аномалий, обнаруживают неожиданное поведение и, таким образом, имеют возможность определить симптомы атак без знания конкретных деталей атаки.
+	\item Детекторы аномалий могут создавать информацию, которая в дальнейшем будет использоваться для определения сигнатур для детекторов злоупотреблений.
+\end{itemize}
+
+\paragraph*{Недостатки определения аномалий:}
+
+\begin{itemize}
+	\item Подходы определения аномалий обычно создают большое количество ложных сигналов при непредсказуемом поведении пользователей и непредсказуемой сетевой активности.
+	\item Подходы определения аномалий часто требуют некоторого этапа обучения системы, во время которого определяются характеристики нормального поведения.
+\end{itemize}
 
 \subsubsection{Модели известных атак}
 \begin{itemize}
-	\item Необычные запросы и команды администрирования SQL сервера, часто употребляемые взломщиками (DROP, CREATE и т.д.)
+	\item Необычные запросы и команды администрирования SQL сервера, часто употребляемые 
+	взломщиками (DROP, CREATE и т.д.)
 	\item Незаконные операции DELETE, UPDATE и INSERT
 	\item Запросы, содержащие id администратора
 	\item Обращение к служебным таблицам и скрытым данным
