Add introduction to models

--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -1,4 +1,36 @@
 \subsection{Модели безопасности в СУБД}
+
+Сегодня существует большое число различных теоретических моделей, которые позволяют описать 
+практически все аспекты безопасности и обеспечивают средства защиты информации формально 
+подтверждённой алгоритмической базой. Однако на практике воспользоваться результатами данных 
+исследований не всегда удается, потому что слишком часто теория защиты информации не согласуется 
+с реальной жизнью. Дело в том, что теоретические исследования в области защиты информационных 
+систем носит разрозненный характер и не составляет комплексной теории. Существующие технические 
+разработки основаны на различных подходах проблеме, поэтому методы её решения существенно 
+различаются. Наибольшее развитие получили два подхода -- это формальное моделирования политики 
+безопасности и криптография. Эти различные по происхождению и решаемым задачам подходы взаимно 
+дополняют друг друга. В отличии от криптографии, формальные модели безопасности предоставляют 
+разработчикам защищенных систем принципы, которые лежат в основе архитектуры защищенной системы 
+и определяют концепцию её построения.
+
+Напомним, что под политикой безопасности понимаем совокупность норм и правил, которые регламентируют 
+процесс обработки информации. Выполнение этих правил обеспечивает защиту от определённого 
+множества угроз и составляет необходимые условия безопасности систем. Формальным выражением 
+политики безопасности будем называть \textbf{моделью политики безопасности} (или просто моделью безопасности).
+
+Для чего необходимы модели безопасности? Обычно модель безопасности в себя включает:
+\begin{itemize}
+    \item определение условий, которым должно подчиняться поведение системы,
+    \item выработка критериев безопасности.
+\end{itemize}
+\textbf{\textit{Основная цель создания формальный модели политики безопасности информационной системы}} -- это 
+проведение формального доказательства соответствия системы критериям при соблюдении 
+установленных правил и ограничений.
+
+На практике это означает, что только соответствующим образом уполномоченные пользователи могут 
+получить доступ к информации, смогут осуществлять с ней только санкционированные политикой 
+безопасности действия.
+
 \subsubsection{Дискреционная (избирательная) модель безопасности}
 Матричная или дискреционная модель является наиболее простой и распространённой. Она строится по следующим принципам:
 \begin{itemize}
