Finish introduction to models

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -228,3 +228,20 @@
     urldate = {2020-05-30},
     year={1995}
 }
+
+@misc{GOST50922,
+	author    = {ФЕДЕРАЛЬНОЕ АГЕНТСТВО ПО ТЕХНИЧЕСКОМУ РЕГУЛИРОВАНИЮ И МЕТРОЛОГИИ},
+	title     = {{ГОСТ Р 50922—2006. Защита информации: ОСНОВНЫЕ ТЕРМИНЫ И ОПРЕДЕЛЕНИЯ}},
+	publisher = {Стандартинформ},
+	year      = 2008,
+	url = {https://files.stroyinf.ru/Data2/1/4293836/4293836037.pdf}
+}
+
+@book{Zegzhda,
+author    = {Зегжда Д.П., Ивашко А.M.}, 
+	title     = {{Основы безопасности информационных систем}},
+	publisher = {Горячая линия - Телеком},
+	year      = 2000,
+	isbn      = {5-93517-018-3},
+	url = {https://www.studmed.ru/zegzhda-d-p-osnovy-bezopasnosti-informacionnyh-sistem_dcc012e982a.html}
+}
