--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -11,28 +11,60 @@
 безопасности и криптография. Эти различные по происхождению и решаемым задачам подходы взаимно 
 дополняют друг друга. В отличии от криптографии, формальные модели безопасности предоставляют 
 разработчикам защищенных систем принципы, которые лежат в основе архитектуры защищенной системы 
-и определяют концепцию её построения.
+и определяют концепцию её построения \autocite{Zegzhda}.
 
-Напомним, что под политикой безопасности понимаем совокупность норм и правил, которые регламентируют 
-процесс обработки информации. Выполнение этих правил обеспечивает защиту от определённого 
-множества угроз и составляет необходимые условия безопасности систем. Формальным выражением 
-политики безопасности будем называть \textbf{моделью политики безопасности} (или просто моделью безопасности).
+Напомним, что \textit{под политикой безопасности понимаем совокупность норм и правил}, которые 
+регламентируют процесс обработки информации. Выполнение этих правил обеспечивает защиту от 
+определённого множества угроз и составляет необходимые условия безопасности систем. Формальным 
+выражением политики безопасности будем называть \textbf{моделью политики безопасности} (или 
+просто моделью безопасности).
 
 Для чего необходимы модели безопасности? Обычно модель безопасности в себя включает:
 \begin{itemize}
     \item определение условий, которым должно подчиняться поведение системы,
     \item выработка критериев безопасности.
 \end{itemize}
-\textbf{\textit{Основная цель создания формальный модели политики безопасности информационной системы}} -- это 
-проведение формального доказательства соответствия системы критериям при соблюдении 
-установленных правил и ограничений.
+\textbf{\textit{Основная цель создания формальный модели политики безопасности информационной 
+системы}} -- это проведение формального доказательства соответствия системы критериям при 
+соблюдении установленных правил и ограничений.
 
 На практике это означает, что только соответствующим образом уполномоченные пользователи могут 
 получить доступ к информации, смогут осуществлять с ней только санкционированные политикой 
 безопасности действия.
 
+Перед расcмотрением наиболее распространённых моделей политик безопасности, основанных на 
+контроле доступа субъектов к объектам, введём основные представления систем \autocite{Zegzhda}:
+\begin{enumerate}
+    \item Сущности системы -- \textbf{субъекты и объекты}. Интуитивно объекты можно представить в 
+    виде ячеек, содержащих информацию, а субъектами можно считать выполняющиеся программы, 
+    которые воздействует на объекты различными способами. Безопасность обработки информации 
+    обеспечивается с помощью решения задачи управления доступом субъектов к объектам в соответствии 
+    с политикой безопасности
+    \item Взаимодействия в системе моделируются с помощью установления \textbf{отношений определённых 
+    типов между субъектами и объектами}. Множество типов отношений определяется в виде набора 
+    операций, которые субъекты могут проводить над объектами
+    \item Все операции контролируются \textbf{монитором взаимодействий}, разрешаются или запрещаются в 
+    соответствии с политикой безопасности
+    \item \textbf{Политика безопасности} задается в виде правил, в соответствии с которыми должны 
+    осуществляться все взаимодействия между субъектами и объектами
+    \item Совокупность множеств субъектов, объектов и отношений между ними определяет \textbf{текущее 
+    состояние системы}
+    \item Основной элемент модели безопасности -- \textbf{доказательство утверждения (теоремы)} о 
+    том, что система, находящаяся в безопасном состоянии, не может перейти в небезопасное состояние 
+    при соблюдении всех установленных правил и ограничений
+\end{enumerate}
+
+Отметим, что среди моделей политик безопасности можно выделить два основных направления (по принципу 
+установления отношений между субъектами и объектами):
+\begin{enumerate}
+    \item дискреционные,
+    \item мандатные политики.
+\end{enumerate}
+
 \subsubsection{Дискреционная (избирательная) модель безопасности}
-Матричная или дискреционная модель является наиболее простой и распространённой. Она строится по следующим принципам:
+
+Дискреционная (матричная) модель является наиболее простой и распространённой. Она строится по следующим принципам:
+
 \begin{itemize}
 	\item В системе определяются субъекты и объекты
 	\item Задаются права доступа для каждого сочетания «субъект+объект»
