Apply discretionary security models introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -245,3 +245,11 @@ author    = {Зегжда Д.П., Ивашко А.M.},
 	isbn      = {5-93517-018-3},
 	url = {https://www.studmed.ru/zegzhda-d-p-osnovy-bezopasnosti-informacionnyh-sistem_dcc012e982a.html}
 }
+
+@online{URFULecture10Models,
+    author = {{Уральский федеральный университет}},
+    title = {{Лекция 10. Политика и модели безопасности}},
+    url = {https://learn.urfu.ru/resource/index/data/resource_id/40980/revision_id/0},
+    urldate = {2021-04-07},
+}
+
