--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -32,6 +32,8 @@
 получить доступ к информации, смогут осуществлять с ней только санкционированные политикой 
 безопасности действия.
 
+\paragraph{Основные представления информационных систем}
+
 Перед расcмотрением наиболее распространённых моделей политик безопасности, основанных на 
 контроле доступа субъектов к объектам, введём основные представления систем \autocite{Zegzhda}:
 \begin{enumerate}
@@ -40,15 +42,22 @@
     которые воздействует на объекты различными способами. Безопасность обработки информации 
     обеспечивается с помощью решения задачи управления доступом субъектов к объектам в соответствии 
     с политикой безопасности
+
     \item Взаимодействия в системе моделируются с помощью установления \textbf{отношений определённых 
     типов между субъектами и объектами}. Множество типов отношений определяется в виде набора 
     операций, которые субъекты могут проводить над объектами
+
     \item Все операции контролируются \textbf{монитором взаимодействий}, разрешаются или запрещаются в 
-    соответствии с политикой безопасности
+    соответствии с политикой безопасности. Монитор безопасности –- механизм реализации политики 
+    безопасности в автоматизированной системе, совокупность аппаратных, программных и специальных 
+    компонент системы, реализующих функции защиты и обеспечения безопасности \autocite{URFULecture10Models}
+
     \item \textbf{Политика безопасности} задается в виде правил, в соответствии с которыми должны 
     осуществляться все взаимодействия между субъектами и объектами
+
     \item Совокупность множеств субъектов, объектов и отношений между ними определяет \textbf{текущее 
     состояние системы}
+
     \item Основной элемент модели безопасности -- \textbf{доказательство утверждения (теоремы)} о 
     том, что система, находящаяся в безопасном состоянии, не может перейти в небезопасное состояние 
     при соблюдении всех установленных правил и ограничений
@@ -63,24 +72,45 @@
 
 \subsubsection{Дискреционная (избирательная) модель безопасности}
 
-Дискреционная (матричная) модель является наиболее простой и распространённой. Она строится по следующим принципам:
+Политика дискреционного (избирательного) доступа реализована в большинстве защищенных информационных 
+систем и исторически является первой проработанной в теоретическом и практическом плане. Первые описания 
+моделей дискреционного доступа появились еще в 60-х годах \autocite{URFULecture10Models}. Позднее 
+будут рассмотрены наиболее популярные модели.
 
-\begin{itemize}
-	\item В системе определяются субъекты и объекты
-	\item Задаются права доступа для каждого сочетания «субъект+объект»
-\end{itemize}
-Отношения между субъектами объектами можно представить в виде матрицы доступа (access matrix), в строках которой перечислены субъекты, в заголовках столбцов перечислены объекты, а в ячейках (на пересечении строк и столбцов) указываются разрешенные виды доступа.
+Важно отметить, что модели дискреционного доступа непосредственно основываются на субъектно-объектной 
+модели информационной системы введенной ранее и развивают ее как совокупность некоторых множеств 
+взаимодействующих элементов (субъектов, объектов и т. д.). Множество (область) безопасных доступов 
+в моделях дискреционного доступа определяется дискретным набором троек «пользователь (субъект) –- поток
+(операция) –- объект» \autocite{URFULecture10Models}.
 
-Виды доступа могут быть определены в каждом случае индивидуально.
+\paragraph{Дискреционная модель на примере матричной}
 
-Недостатками матричной модели являются ее статичность и чрезмерно детализированный способ указания отношений между субъектами и объектами.
+На практике наибольшее применение получили дискреционные модели, основанные на матрице доступа. 
+Дискреционная (матричная) модель является наиболее простой и распространённой. Отношения между 
+субъектами и объектами можно представить в виде матрицы доступа (access matrix), в строках которой 
+перечислены субъекты, в заголовках столбцов перечислены объекты, а в ячейках (на пересечении строк 
+и столбцов) указываются разрешенные виды доступа. То есть задаются права доступа для каждого сочетания 
+«субъект+объект». Виды доступа могут быть определены в каждом случае индивидуально. Обычно в матрице 
+используются следующие обозначения: w –- «писать», r –- «читать», e –- «исполнять».
 
-При большом количестве пользователей администрирование такой системы усложняется, что приводит к возникновению ошибок.
+\paragraph{Недостатки матричной модели}
 
-Но основной недостаток матричной модели заключается в том, что субъект, имеющий право на чтение информации может передать эту информацию другим субъектам, без уведомления владельца объекта. Кроме того, не всегда можно назначить владельца каждому объекту (объекты часто принадлежат не отдельным субъектам, а всей системе).
+Недостатками матричной модели являются ее статичность и чрезмерно детализированный способ указания 
+отношений между субъектами и объектами. При большом количестве пользователей администрирование такой 
+системы усложняется, что приводит к возникновению ошибок.
 
-Статичность модели препятствует быстрому внесению изменений в систему, например, при увольнении/найме новых сотрудников или при смене их должности/переводу в другое подразделение.
-Кроме того, для получения полного доступа к системе злоумышленнику достаточно узнать данные учетной записи пользователя. 
+Однако основной недостаток матричной модели заключается в том, что субъект, имеющий право на чтение 
+информации может передать эту информацию другим субъектам, без уведомления владельца объекта. Причина 
+этого недостатока исходит из того, что \textbf{\textit{во всех дискреционных моделях контролируются только 
+операции доступа субъектов к объектам, а не потоки информации между ними}}. Поэтому, когда происходит 
+перенос информации из доступного пользователю объекта в объект, доступный нарушителю, то формально 
+никакое правило дискреционной политики безопасности не нарушается, но утечка информации происходит 
+\autocite{URFULecture10Models}. Кроме того, не всегда можно назначить владельца каждому объекту 
+(объекты часто принадлежат не отдельным субъектам, а всей системе).
+
+Статичность модели препятствует быстрому внесению изменений в систему, например, при увольнении/найме 
+новых сотрудников или при смене их должности/переводу в другое подразделение. Кроме того, для получения 
+полного доступа к системе злоумышленнику достаточно узнать данные учетной записи пользователя. 
 
 \subsubsection{Мандатная (полномочная) модель безопасности}
 
