Added description of Mandatory Security Models

--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -112,12 +112,59 @@
 новых сотрудников или при смене их должности/переводу в другое подразделение. Кроме того, для получения 
 полного доступа к системе злоумышленнику достаточно узнать данные учетной записи пользователя. 
 
+\paragraph{Централизованный и распределенный подходы построения матрицы}
+
+Принцип организации матрицы доступа в реальных системах определяет использование двух подходов –- 
+централизованного и распределенного.
+
+При централизованном подходе матрица доступа создается как отдельный самостоятельный объект с особым 
+порядком размещения и доступа к нему. Количество объектов и субъектов доступа в реальных АС может быть
+велико. Для уменьшения количества столбцов матрицы объекты доступа АС могут делиться на две группы –- 
+группу объектов, доступ к которым не ограничен, и группу объектов дискреционного доступа. В матрице 
+доступа представляются права пользователей только к объектам второй группы. Наиболее известным примером 
+такого подхода являются «биты доступа» в UNIX-системах \autocite{URFULecture10Models}.
+
+При распределенном подходе матрица доступа как отдельный объект не создается, а представляется или 
+«списками доступа», распределенными по объектам системы, или «списками возможностей», распределенными 
+по субъектам доступа. В первом случае каждый объект системы, помимо идентифицирующих характеристик, 
+наделяется еще своеобразным списком, непосредственно связанным с самим объектом и представляющим, 
+по сути, соответствующий столбец матрицы доступа. Во втором случае список с перечнем разрешенных для 
+доступа объектов (строку матрицы доступа) получает каждый субъект при своей инициализации 
+\autocite{URFULecture10Models}.
+
 \subsubsection{Мандатная (полномочная) модель безопасности}
 
-Многоуровневые или мандатные модели доступа были разработаны с целью устранения недостатков матричных моделей.
-В многоуровневой модели задается порядок следования уровней доступа и уровней секретности, а затем устанавливаются связи между уровнем доступа и уровнем секретности.
-Эти связи, устанавливающие разрешение на доступ, называются мандатными.
-При создании системы безопасности с использованием мандатной модели необходимо:
+Мандатные (многоуровневые) модели доступа были разработаны с целью устранения недостатков дискреционных 
+(матричных) моделей. Политика мандатного доступа является примером использования технологий, 
+наработанных во внекомпьютерной сфере, в частности принципов организации секретного делопроизводства 
+и документооборота, применяемых в государственных структурах большинства стран.
+
+Основным положением политики мандатного доступа является назначение: (1) всем участникам процесса 
+обработки защищаемой информации и (2) документам, в которых она содержится, специальной метки 
+(например \textit{секретно}, \textit{сов. секретно} и т. д.) получившей название \textbf{уровня безопасности}. 
+Все уровни безопасности упорядочиваются с помощью установленного \textbf{отношения
+доминирования}, например, уровень безопасности \textit{сов. секретно} считается более высоким чем
+уровень \textit{секретно}.
+
+В многоуровневой модели задается порядок следования уровней доступа и уровней безопасности (секретности), 
+а затем устанавливаются \textbf{связи между уровнем доступа и уровнем секретности}. Эти связи, 
+устанавливающие разрешение на доступ, называются \textbf{мандатными связями}.
+
+Контроль доступа осуществляется в зависимости от уровней безопасности взаимодействующих сторон на 
+основании двух правил \autocite{URFULecture10Models}:
+\begin{enumerate}
+    \item \textbf{No read up (NRU)} – нет чтения вверх: субъект имеет право читать только те документы, 
+    уровень безопасности которых не превышает его собственный уровень безопасности
+
+    \item \textbf{No write down (NWD)} – нет записи вниз: субъект имеет право заносить информацию только 
+    в те документы, уровень безопасности которых не ниже его собственного уровня безопасности
+\end{enumerate}
+\textbf{\textit{Первое правило обеспечивает защиту информации, обрабатываемой более доверенными 
+(высокоуровневыми) лицами, от доступа со стороны менее доверенных (низкоуровневых). Второе правило 
+предотвращает утечку информации (сознательную или несознательную) от высокоуровневых участников 
+процесса обработки информации к низкоуровневым.}}
+
+Таким образом, при создании системы безопасности с использованием мандатной модели необходимо:
 \begin{itemize}
     \item Определить все объекты в системе, к которым необходимо предоставить доступ;
     \item Составить список субъектов, получающих доступ к объектам;
@@ -127,26 +174,39 @@
     \item Определить все возможные виды разрешений на доступ;
     \item Установить связи (в виде разрешений на доступ) между группами субъектов и группами объектов.
 \end{itemize}
-Вторая задача, решаемая с помощью мандатной модели – предотвращение утечки информации от субъектов и объектов с высоким уровнем доступа к субъектам и объектам с более низким уровнем доступа.
 
-Очевидно, что субъект с низким уровнем доступа не должен получать
-доступ к объектам с более высоким уровнем секретности.
-
-Менее очевидно то, что субъект с высоким уровнем доступа не должен иметь полного доступа к объектам с меньшим уровнем секретности.
-
-Проблема заключается в том, что информация, полученная субъектом с высоким уровнем доступа, может быть (случайно или намеренно) передана им объекту с более низким уровнем доступа.
-
-Например, субъект, получивший легальный доступ к объекту (документу) с уровнем «Совершенно секретно», не должен иметь возможность скопировать текст, содержащий совершенно секретную информацию, и записать его в объект (документ) с более низким уровнем «Секретно», так как таким образом субъекты с уровнем доступа «Секретно» получат доступ к совершенно секретным данным. 
+\textit{Преимуществом мандатной модели безопасности перед дискреционной состоит в возможности 
+контролировать не только операции доступа субъектов к объектам, но и потоки информации между 
+ними (за счёт наличия дополнительных правил накладываемых на мандатные связи)}.
 
 \subsubsection{Классификация моделей безопасности}
 
+Обычно говоря о моделях безопасности имеют ввиду модели разграничения доступа. Можно выделить три 
+основные категории субъектно-объектных моделей разграничения доступа:
 \begin{itemize}
     \item Модели систем дискреционного разграничения доступа;
     \item Модели систем мандатного разграничения доступа;
-    \item Модели безопасности информационных потоков;
-    \item Модели ролевого разграничения доступа;
-    \item Субъектно-ориентированная модель изолированной программной среды.
+    \item Модели ролевого разграничения доступа.
+    % \item Модели безопасности информационных потоков;
+    % \item Субъектно-ориентированная модель изолированной программной среды.
 \end{itemize}
+
+Модели систем дискреционного разграничения доступа и модели систем мандатного разграничения доступа 
+ранее мы уже рассмотрели, дадим краткое описание ролевым моделям безопасности.
+
+\paragraph{Модели ролевого разграничения доступа}
+
+Ролевые модели безопасности нельзя отнести ни к дискреционным, ни к мандатным моделям, потому что 
+управление доступом в них осуществляется как на основе матрицы прав доступа для ролей, так и с помощью 
+правил, регламентирующих назначение ролей пользователям и их активации во время сеансов. Поэтому 
+ролевая модель представляет собой совершенно особый тип политики, основанный на компромиссе между 
+гибкостью и простотой управления доступом (характерным для дискреционных моделей), так и жёсткостью 
+правил контроля доступа (соответствующие мандатным моделям).
+
+В ролевой модели классическое понятие \textit{субъект} заменяется понятиями \textit{пользователь} и 
+\textit{роль}. Пользователь -- это человек, работающий c системой и выполняющий определённые обязанности. 
+Роль -- это активно действующая в системе абстрактная сущность, c которой связан ограниченный, логический 
+связный набор полномочий, необходимый для осуществления определённой деятельности.
 
 \subsubsection{Аспекты исследования моделей безопасности}
 \subsubsection{Особенности применения моделей безопасности в СУБД}
